# spot-is-a-dog

./: AUTOMATIC_VERSIONING.md  CHANGES_SUMMARY.md  Dockerfile  FIXES.md  QUICK_START.md  README.md  build.sh  deploy.sh  docker-compose.yml  generate_christmas_icon.py  generate_icons.py  pyproject.toml  test_sse.py
.cursor/rules/: frontend_polling.md
spot/: entsoe.py  main.py
static/: manifest.json
static/css/: styles.css
static/js/: main.js
templates/: index.html
templates/partials/: prices.html
